[tool.poetry]
name = "stat_tools"
version = "0.1.0"
description = "Stat Tools project"
authors = ["Charles-Auguste <charles-auguste.gourio@enpc.fr>"]
readme = "README.md"
packages = [
    { include = "stat_tools" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
coverage = "^7.6.4"
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = {extras = ["jupyter"], version = "^24.10.0"}
ipython = "^8.29.0"
pre-commit = "^4.0.1"
ipdb = "^0.13.13"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CLI
[tool.poetry.scripts]
stat_tools = "stat_tools.cli:cli"
build = "stat_tools.pyinstaller:install"

# Pre-commit
[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.isort]
line_length = 88
known_first_party = "stat_tools"
multi_line_output = 3
profile = "black"

# Pytest and Coverage
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v --durations=0"
cache_dir = ".cache/pytest_cache"

[tool.coverage.run]
branch = true
source = ["stat_tools"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "pkg_coverage.xml"
